syntax = "proto3";

package contact;

option go_package = "github.com/esklo/residents-tracking-platform/gen/proto/contact";

import "empty/empty.proto";

service ContactService {
  rpc GetById(ByIdRequest) returns (Contact);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(Contact) returns (Contact);
  rpc Delete(ByIdRequest) returns (empty.Empty);
}

message ByIdRequest {
  string id = 1;
}

message GetRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message GetResponse {
  repeated Contact contacts = 1;
}

message Contact {
  string id = 1;
  optional int64 phone = 2;
  optional string email = 3;
  string name = 4;
  optional string note = 5;
}